[workspace]
members = ["crates/*", "test_bin"]
default-members = ["crates/*", "test_bin"]
resolver = "2"

[workspace.package]
version = "0.0.70"
edition = "2021"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[workspace.dependencies]
ahash = { version = "0.8.11", default-features = false }
chrono = { version = "0.4.38" }
futures = "0.3.30"
hashbrown = "0.14.5"
once_cell = "1.19.0"
parking_lot = "0.12"
rand = "0.8.5"
smallvec = "1.13.2"
rayon = "1.10.0"
num_cpus = "1.16.0"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "time"] }
tracing = { version = "0.1.40", default-features = false }
regex = "1.10.5"
url = "2.5.1"
serde = { version = "1.0.204", features = ["derive", "rc"] }
erased-serde = "0.4.5"
serde_json = { version = "1.0", features = ["std"] }
bytes = "1.6.0"
uuid = { version = "1.10.0", features = ["v4"] }
scc = "2.1.13"
