[workspace]
members = ["crates/*", "test_bin", "bench_bin"]
default-members = ["crates/*", "test_bin", "bench_bin"]
resolver = "2"

[workspace.package]
version = "25.6.2"
edition = "2024"
license = "MIT"
homepage = "https://glaredb.com"
repository = "https://github.com/glaredb/glaredb"
keywords = ["database", "sql", "analytics"]
categories = ["database-implementations"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[workspace.lints.clippy]
literal_string_with_formatting_args = "warn"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
chrono = { version = "0.4.41" }
futures = "0.3.30"
hashbrown = "0.14.5"
parking_lot = "0.12"
rand = "0.9.1"
rayon = "1.10.0"
num_cpus = "1.17.0"
tokio = { version = "1.45.1", default-features = false }
tracing = { version = "0.1.40", default-features = false }
regex = "1.10.5"
url = "2.5.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["std"] }
bytes = "1.10.0"
uuid = { version = "1.17.0", features = ["v4"] }
scc = "2.3.4"
half = { version = "2.6.0", features = ["num-traits", "serde"] }
getrandom = { version = "0.3" }
ring = "0.17"
clap = { version = "4.5.40", features = ["derive", "env"] }

# Binaries
glaredb = { path = "crates/glaredb", version = "25.6.2" }
docgen = { path = "crates/docgen", version = "25.6.2" }

# Core crates
glaredb_core = { path = "crates/glaredb_core", version = "25.6.2" }
glaredb_error = { path = "crates/glaredb_error", version = "25.6.2" }
glaredb_http = { path = "crates/glaredb_http", version = "25.6.2" }
glaredb_parser = { path = "crates/glaredb_parser", version = "25.6.2" }

# Extensions
glaredb_ext_csv = { path = "crates/glaredb_ext_csv", version = "25.6.2" }
glaredb_ext_default = { path = "crates/glaredb_ext_default", version = "25.6.2" }
glaredb_ext_delta = { path = "crates/glaredb_ext_delta", version = "25.6.2" }
glaredb_ext_iceberg = { path = "crates/glaredb_ext_iceberg", version = "25.6.2" }
glaredb_ext_parquet = { path = "crates/glaredb_ext_parquet", version = "25.6.2" }
glaredb_ext_spark = { path = "crates/glaredb_ext_spark", version = "25.6.2" }
glaredb_ext_tpch_gen = { path = "crates/glaredb_ext_tpch_gen", version = "25.6.2" }

# Bindings
glaredb_python = { path = "crates/glaredb_python", version = "25.6.2" }
glaredb_wasm = { path = "crates/glaredb_wasm", version = "25.6.2" } # Technically also runtime

# Test/bench helpers
harness = { path = "crates/harness", version = "25.6.2" }
glaredb_bench = { path = "crates/glaredb_bench", version = "25.6.2" }
glaredb_slt = { path = "crates/glaredb_slt", version = "25.6.2" }

# Runtimes
glaredb_rt_native = { path = "crates/glaredb_rt_native", version = "25.6.2" }

# Misc
glaredb_proto = { path = "crates/glaredb_proto", version = "25.6.2" }
logutil = { path = "crates/logutil", version = "25.6.2" }
