[package]
name = "bench_bin"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glaredb_error = { path = '../crates/glaredb_error' }
glaredb_core = { path = '../crates/glaredb_core' }
glaredb_rt_native = { path = '../crates/glaredb_rt_native' }
glaredb_bench = { path = '../crates/glaredb_bench' }

ext_default = { path = '../crates/ext_default' }
ext_spark = { path = '../crates/ext_spark' }
ext_csv = { path = '../crates/ext_csv' }
ext_parquet = { path = '../crates/ext_parquet' }
ext_tpch_gen = { path = '../crates/ext_tpch_gen' }
ext_iceberg = { path = '../crates/ext_iceberg' }

harness = { path = '../crates/harness' }

[[bench]]
harness = false
name = "bench_runner"
path = "bench_runner.rs"

