[package]
name = "bench_bin"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glaredb_error = { path = '../crates/glaredb_error' }
glaredb_core = { path = '../crates/glaredb_core' }
glaredb_rt_native = { path = '../crates/glaredb_rt_native' }
glaredb_bench = { path = '../crates/glaredb_bench' }

glaredb_ext_default = { path = '../crates/glaredb_ext_default' }

harness = { path = '../crates/harness' }

[[bench]]
harness = false
name = "bench_runner"
path = "bench_runner.rs"

