[package]
name = "py-glaredb"
version.workspace = true
edition = "2021"

# [workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glaredb"
crate-type = ["cdylib"]

[dependencies]
tokio.workspace = true
datafusion = { workspace = true, features = ["pyarrow"] }
thiserror.workspace = true

pyo3 = { version = "0.18.3", features = ["abi3-py37", "extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
sqlexec = { path = "../crates/sqlexec" }
metastore = { path = "../crates/metastore" }
telemetry = { path = "../crates/telemetry" }
pgsrv = { path = "../crates/pgsrv" }
pgrepr = { path = "../crates/pgrepr" }
futures = "0.3.28"
url = "2.4.0"
uuid = "1.4.0"
anyhow = "1.0.71"
async-trait = "0.1.71"
once_cell = "1.18.0"
