[package]
name = "py-glaredb"
version.workspace = true
edition = "2021"

# [workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glaredb"
crate-type = ["cdylib"]

[dependencies]
tokio.workspace = true
datafusion = { workspace = true, features = ["pyarrow"] }
thiserror.workspace = true

pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
sqlexec = { path = "../crates/sqlexec" }
metastore = { path = "../crates/metastore" }
telemetry = { path = "../crates/telemetry" }
pgsrv = { path = "../crates/pgsrv" }
pgrepr = { path = "../crates/pgrepr" }
futures = "0.3.28"
url = "2.4.0"
uuid = "1.4.1"
async-trait = "0.1.72"
anyhow = "1.0.72"
once_cell = "1.18.0"
