[package]
name = "py-glaredb"
version.workspace = true
edition = "2021"

# [workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glaredb"
crate-type = ["cdylib"]

[dependencies]
tokio.workspace = true
datafusion = { workspace = true, features = ["pyarrow"] }
thiserror.workspace = true
url.workspace = true

pyo3 = { version = "0.19.2", features = ["abi3-py37", "extension-module"] }
sqlexec = { path = "../crates/sqlexec" }
metastore = { path = "../crates/metastore" }
telemetry = { path = "../crates/telemetry" }
pgsrv = { path = "../crates/pgsrv" }
pgrepr = { path = "../crates/pgrepr" }
datafusion_ext = { path = "../crates/datafusion_ext" }
arrow_util = { path = "../crates/arrow_util" }
glaredb = { path = "../crates/glaredb" }
futures = "0.3.28"
uuid = "1.4.1"
async-trait = "0.1.72"
anyhow = "1.0.72"
once_cell = "1.18.0"

[profile.release]
codegen-units = 1
lto = "fat"