[package]
name = "test_bin"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glaredb_error = { path = '../crates/glaredb_error' }
glaredb_execution = { path = '../crates/glaredb_execution' }
rayexec_rt_native = { path = '../crates/rayexec_rt_native' }
glaredb_slt = { path = '../crates/glaredb_slt' }
tokio = { workspace = true, default-features = false, features = ["rt", "rt-multi-thread", "time", "net"] }

[[test]]
harness = false
name = "integration_slt_standard"
path = "integration_slt_standard.rs"
