[package]
name = "test_bin"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glaredb_error = { path = '../crates/glaredb_error' }
glaredb_core = { path = '../crates/glaredb_core' }
glaredb_rt_native = { path = '../crates/glaredb_rt_native' }
glaredb_slt = { path = '../crates/glaredb_slt' }

ext_tpch_gen = { path = '../crates/ext_tpch_gen' }
ext_csv = { path = '../crates/ext_csv' }
ext_parquet = { path = '../crates/ext_parquet' }

tokio = { workspace = true, default-features = false, features = ["rt", "rt-multi-thread", "time", "net"] }


[[test]]
harness = false
name = "integration_slt"
path = "integration_slt.rs"

