[package]
name = "test_bin"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glaredb_error = { path = '../crates/glaredb_error' }
glaredb_core = { path = '../crates/glaredb_core' }
glaredb_rt_native = { path = '../crates/glaredb_rt_native' }
glaredb_slt = { path = '../crates/glaredb_slt' }

glaredb_ext_tpch_gen = { path = '../crates/glaredb_ext_tpch_gen' }
glaredb_ext_csv = { path = '../crates/glaredb_ext_csv' }
glaredb_ext_parquet = { path = '../crates/glaredb_ext_parquet' }
glaredb_ext_iceberg = { path = '../crates/glaredb_ext_iceberg' }

harness = { path = '../crates/harness' }
logutil = { path = '../crates/logutil' }

tokio = { workspace = true, default-features = false, features = ["rt", "rt-multi-thread", "time", "net"] }

[[test]]
harness = false
name = "integration_slt"
path = "integration_slt.rs"

