[tool.poetry]
name = "tests"
version = "0.1.0"
description = "glaredb tests"
authors = ["sam kleinman <sam@glaredb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"
pyarrow = "^14.0.2"
pylance = "^0.9.6"
ruff = "0.1.14"
dbt-core = "^1.7.7"
dbt-postgres = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
