[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "blocking"] }
xshell = "0.2.5"
zip = "0.6.6"
