[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "xtask"
# no tests currently implemented in this package; skip, then
doctest = false
test = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
xshell = "0.2.6"
zip = "1.2.2"
