[package]
edition = "2021"
name = "js-glaredb"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
ioutil = { path = "../../crates/ioutil" }
sqlexec = { path = "../../crates/sqlexec" }
metastore = { path = "../../crates/metastore" }
telemetry = { path = "../../crates/telemetry" }
pgsrv = { path = "../../crates/pgsrv" }
pgrepr = { path = "../../crates/pgrepr" }
datafusion_ext = { path = "../../crates/datafusion_ext" }
arrow_util = { path = "../../crates/arrow_util" }
terminal_util = { path = "../../crates/terminal_util" }
futures = { workspace = true }
datafusion = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lzma-sys = { version = "*", features = ["static"] } # Prevent dynamic linking of lzma, which comes from datafusion
napi = { version = "2.16.1", default-features = false, features = ["full"] }
napi-derive = "2.16.1"
once_cell = "1.19.0"
bytes = "1.6.0"

[build-dependencies]
napi-build = "2.1.2"
