[package]
edition = "2021"
name = "js-glaredb"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
glaredb = { path = "../../crates/glaredb" }
futures = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
lzma-sys = { version = "*", features = ["static"] } # Prevent dynamic linking of lzma, which comes from datafusion
napi = { version = "2.16.10", default-features = false, features = ["full"] }
napi-derive = "2.16.12"
once_cell = "1.19.0"
async-once-cell = "0.5.3"

[build-dependencies]
napi-build = "2.1.3"
