[package]
name = "py-glaredb"
version.workspace = true
edition = "2021"

[lints]
workspace = true

# [workspace]

[lib]
name = "glaredb"
crate-type = ["cdylib"]

[dependencies]
telemetry = { path = "../../crates/telemetry" }
arrow_util = { path = "../../crates/arrow_util" }
terminal_util = { path = "../../crates/terminal_util" }
glaredb = { path = "../../crates/glaredb" }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true, features = ["pyarrow"] } # override workspace features
lzma-sys = { version = "*", features = ["static"] } # prevent dynamic linking of lzma, which comes from datafusion
pyo3 = { version = "0.20.3", features = ["abi3-py37", "extension-module"] }
once_cell = "1.20.2"
