[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glaredb"
description = "GlareDB is a fast SQL database for querying and analyzing distributed data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "maturin==1.0.1",
  "ruff==0.0.275",
  "mypy==1.3.0",
  "typos==1.15",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "great_expectations[postgresql]",
  "great_expectations",
  "virtualenv==20.23.1",
  "black==23.3.0",
  "blackdoc==0.3.8",
  "pytest",
]
pandas = [
  "pandas",
  "pandasai",
]
polars = [
  "polars",
]

[project.urls]
Homepage = "https://glaredb.com"
Documentation = "https://docs.glaredb.com"
Repository = "https://github.com/glaredb/glaredb"
Changelog = "https://github.com/glaredb/glaredb/releases"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
fix = true
ignore = [
    "F841" # unused variables
]
