[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glaredb"
description = "GlareDB is a fast SQL database for querying and analyzing distributed data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
great-expectations = [
  "great_expectations",
  "great_expectations[postgresql]",
]
pandas = [
  "pandas",
  "pyarrow",
]
pandasai = [
  "pandasai",
]
polars = [
  "polars",
]
pyarrow = [
  "pyarrow",
]


[project.urls]
Homepage = "https://glaredb.com"
Documentation = "https://docs.glaredb.com"
Repository = "https://github.com/glaredb/glaredb"
Changelog = "https://github.com/glaredb/glaredb/releases"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
fix = true
ignore = [
    "F841" # unused variables
]
