[package]
name = "access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logutil = {path = "../logutil"}
common = {path = "../common" }
object_store_util = {path = "../object_store_util"}
dfutil = {path = "../dfutil"}
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1.59"
futures = "0.3.25"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
datafusion = "15.0"
bytes = "1.3"
tempfile = "3"
scc = "0.12.3"
object_store = "0.5"
serde = { version = "1.0", features = ["derive"] }
gcp-bigquery-client = "0.16.3"
serde_json = "1.0.91"
