[package]
name = "arrow_util"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { workspace = true }
comfy-table = "7.1.0"
once_cell = "1.18.0"
textwrap = { version = "0.16.0", default-features = false, features = ["unicode-width"] }
