[package]
name = "arrow_util"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
datafusion = { workspace = true }
comfy-table = { version = "7.1.0", default-features = false }
once_cell = "1.19.0"
textwrap = { version = "0.16.0", default-features = false, features = ["unicode-width"] }
