[package]
name = "arrow_util"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
# no doctests currently implemented in this package; skip, then
doctest = false

[dependencies]
datafusion = { workspace = true }
comfy-table = { version = "7.1.1", default-features = false }
once_cell = "1.20.2"
textwrap = { version = "0.16.1", default-features = false, features = ["unicode-width"] }
