[package]
name = "arrowstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logutil = {path = "../logutil"}
thiserror = "1.0"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
arrow = "22.0.0"
tracing = "0.1"
async-trait = "0.1.56"
tonic = { version = "0.8.0", features = ["transport", "codegen"] }
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"
