[package]
name = "bench_runner"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logutil = {path = "../logutil"}
glaredb = {path = "../glaredb"}
pgsrv = {path = "../pgsrv"}
metastore = {path = "../metastore"}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
anyhow = "1.0"
clap = { version = "4.3.10", features = ["derive"] }
async-trait = "0.1.71"
glob = "0.3.1"
regex = "1.8.1"
tracing = "0.1"
