[package]
name = "bench_runner"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logutil = {path = "../logutil"}
glaredb = {path = "../glaredb"}
pgsrv = {path = "../pgsrv"}
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true  }
tracing = { workspace = true }
tokio-postgres = "0.7.8"
glob = "0.3.1"
regex = "1.8.1"
