[package]
name = "bench_runner"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "bench_runner"
test = false

[dependencies]
logutil = {path = "../logutil"}
cli = {path = "../cli"}
pgsrv = {path = "../pgsrv"}
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true  }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-postgres = "0.7.8"
glob = "0.3.1"
regex = "1.10.5"
