[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "glaredb"
path = "src/bin/main.rs"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
object_store = { workspace = true, features = ["gcp"] }
tracing = { workspace = true }

datafusion_ext = { path = "../datafusion_ext" }
ioutil = { path = "../ioutil" }
logutil = { path = "../logutil" }
metastore = { path = "../metastore" }
object_store_util = { path = "../object_store_util" }
pgrepr = { path = "../pgrepr" }
pgsrv = { path = "../pgsrv" }
protogen = { path = "../protogen" }
parser = { path = "../parser" }
proxyutil = { path = "../proxyutil" }
rpcsrv = { path = "../rpcsrv" }
slt = { path = "../slt" }
sqlexec = { path = "../sqlexec" }
telemetry = { path = "../telemetry" }
sqlbuiltins = { path = "../sqlbuiltins" }
arrow_util = { path = "../arrow_util" }
terminal_util = { path = "../terminal_util" }

num_cpus = "1.16.0"
colored = "2.1.0"
nu-ansi-term = "0.50.1"
reedline = "0.33.0"
atty = "0.2.14"
console-subscriber = "0.3.0"
tokio-postgres = "0.7.11"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
glob = "0.3.1"

lzma-sys = { version = "*", features = ["static"] } # Prevent dynamic linking of lzma, which comes from datafusion

[build-dependencies]
built = { version = "0.7.3", features = ["git2"] }
