[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
logutil = {path = "../logutil"}
reqwest = { version = "0.11.13", features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
