[package]
name = "cloudwal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logutil = {path = "../logutil"}
lemur = {path = "../lemur"}
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.56"
futures = "0.3.21"
parking_lot = "0.12.1"
bincode = "1.3.3"
tempdir = "0.3.7"
object_store = "0.4"
bytes = "1.2"
