[package]
name = "colstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lemur = {path = "../lemur"}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.56"
futures = "0.3.21"
bitvec = { version = "1", features = ["serde"] }
dashmap = "5.3.4"
bincode = "1.3.3"
parking_lot = "0.12.1"

