[package]
name = "coretypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmtutil = {path = "../fmtutil"}
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3.21"
bitvec = { version = "1", features = ["serde"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }

