[package]
name = "datafusion_ext"
description = "Shared datafusion extensions"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[features]
default = ["unicode_expressions"]
unicode_expressions = []

[dependencies]
ioutil = { path = "../ioutil" }
telemetry = { path = "../telemetry" }
catalog = { path = "../catalog" }
decimal = { path = "../decimal" }
protogen = { path = "../protogen" }
pgrepr = { path = "../pgrepr" }
serde_json = { workspace = true }
datafusion = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
object_store = { workspace = true }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-recursion = "1.0.4"
regex = "1.10"
once_cell = "1.19.0"
parking_lot = "0.12.1"
bson = "2.9.0"

[dev-dependencies]
chrono = { workspace = true }
ctor = "0.2.6"
env_logger = "0.11"
paste = "^1.0"
rand = "0.8.5"
rstest = "0.18"
